Added Maven compiler plugin